fix - align create playlist and liked songs

--- a/artist-page.css
+++ b/artist-page.css
@@ -133,7 +133,7 @@ li {
 .menu .col > a > img {
   width: 20px;
   height: 20px;
-  margin-right: 1rem;
+  margin-right: 20px;
 }
 .menu i {
   padding-right: 20px;
